content-wrap and content__center's height calculation are corrected; adaptive is added to depart.sass

--- a/src/sass/content/_departments.sass
+++ b/src/sass/content/_departments.sass
@@ -44,32 +44,40 @@
       position: relative
       width: content
       cursor: pointer
-    .opened
+
+    .activity.opened, .management.opened
       display: inline-block
-      &::after
-        position: absolute
-        content: ""
-        width: 0px
-        height: 0px
-        border-top: 8px solid transparent
-        border-right: 8px solid transparent
-        border-bottom: 8px solid white
-        border-left: 8px solid transparent
-        bottom: 15px
-        right: -20px
-    .collapsed
+      .title
+        &::after
+          position: absolute
+          content: ""
+          width: 0px
+          height: 0px
+          border-top: 8px solid transparent
+          border-right: 8px solid transparent
+          border-bottom: 8px solid white
+          border-left: 8px solid transparent
+          bottom: 15px
+          right: -20px
+      .compblock-sub__descr
+        display: flex
+
+    .activity.collapsed, .management.collapsed
       display: inline-block
-      &::after
-        position: absolute
-        content: ""
-        width: 0px
-        height: 0px
-        border-top: 8px solid white
-        border-right: 8px solid transparent
-        border-bottom: 8px solid transparent
-        border-left: 8px solid transparent
-        bottom: 8px
-        right: -20px
+      .title
+        &::after
+          position: absolute
+          content: ""
+          width: 0px
+          height: 0px
+          border-top: 8px solid white
+          border-right: 8px solid transparent
+          border-bottom: 8px solid transparent
+          border-left: 8px solid transparent
+          bottom: 8px
+          right: -20px
+      .compblock-sub__descr
+        display: none
 
   .compblock-sub.activity
     background-color: $col_acsent
